estrutrura do quizz em html

--- a/index.html
+++ b/index.html
@@ -8,6 +8,28 @@
     <script src="js/scripts.js" defer></script>
 </head>
 <body>
-    <h1>Teste dos links</h1>
+    <!--Quizz Title-->
+    <h1 id="main-title">Quizs sobre programação</h1>
+
+    <!--Score Board-->
+    <div id="score-container">
+        <p id="display-score">Score: <span>90</span>%</p>
+        <p>Acertou <span id="correct-answer">1</span> / <span id="question-qty">10</span> perguntas</p>
+        <button id="restart-btn">Recomeçar</button>
+    </div>
+
+    <!--Quizz Container-->
+    <div id="quizz-container">
+        <p id="question"><span id="question-number">1.</span> - <span id="question-text">Qual é a capital da França</span></p>
+        <div id="answers-box">
+            <button class="correct-answer"><span class="btn-letter">a</span> <span class="question-answer">Paris</span></button>
+            <button class="wrong-amswer"><span class="btn-letter">b</span> <span class="question-answer">Marselha</span></button>
+            <button><span class="btn-letter">c</span> <span class="question-answer">Praga</span></button>
+            <button><span class="btn-letter">d</span> <span class="question-answer">Praia</span></button>
+        </div>
+    </div>
+
+    <!--Answer Template-->
+    <button class="answers-template hide"><span class="btn-letter">a</span> <span class="question-answer">Paris</span></button>
 </body>
 </html>
