--- a/index.html
+++ b/index.html
@@ -9,12 +9,14 @@
 </head>
 <body>
     <!--Quizz Title-->
-    <h1 id="main-title">Quizs sobre programação</h1>
+    <h1 id="main-title">Quizz sobre programação</h1>
 
     <!--Score Board-->
     <div id="score-container">
-        <p id="display-score">Score: <span>90</span>%</p>
-        <p>Acertou <span id="correct-answer">1</span> / <span id="question-qty">10</span> perguntas</p>
+        <h2>Parabéns!</h2>
+        <!-- <p id="text-score">Pontuação:</p> -->
+        <p id="display-score"><span>90</span>%</p>
+        <p>Acertou <span id="correct-answers">1</span> / <span id="questions-qty">10</span> perguntas</p>
         <button id="restart-btn">Recomeçar</button>
     </div>
 
