style question-container and update html

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <h1 id="main-title">Quizz sobre programação</h1>
 
     <!--Score Board-->
-    <div id="score-container">
+    <div id="score-container" class="hide">
         <h2>Parabéns!</h2>
         <!-- <p id="text-score">Pontuação:</p> -->
         <p id="display-score"><span>90</span>%</p>
@@ -24,8 +24,8 @@
     <div id="quizz-container">
         <p id="question"><span id="question-number">1.</span> - <span id="question-text">Qual é a capital da França</span></p>
         <div id="answers-box">
-            <button class="correct-answer"><span class="btn-letter">a</span> <span class="question-answer">Paris</span></button>
-            <button class="wrong-amswer"><span class="btn-letter">b</span> <span class="question-answer">Marselha</span></button>
+            <button><span class="btn-letter">a</span> <span class="question-answer">Paris</span></button>
+            <button><span class="btn-letter">b</span> <span class="question-answer">Marselha</span></button>
             <button><span class="btn-letter">c</span> <span class="question-answer">Praga</span></button>
             <button><span class="btn-letter">d</span> <span class="question-answer">Praia</span></button>
         </div>
