--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Quizz about counties</title>
+    <title>Quizz about programation</title>
     <link rel="stylesheet" href="css/styles.css">
     <script src="js/scripts.js" defer></script>
 </head>
 <body>
     <!--Quizz Title-->
-    <h1 id="main-title">Quizz sobre países</h1>
+    <h1 id="main-title">Quizz sobre development</h1>
 
     <!--Score Board-->
     <div id="score-container" class="hide">
