Lógica do Quiz: inserir as alternativa da questão

--- a/index.html
+++ b/index.html
@@ -32,6 +32,6 @@
     </div>
 
     <!--Answer Template-->
-    <button class="answers-template hide"><span class="btn-letter">a</span> <span class="question-answer">Paris</span></button>
+    <button class="answer-template hide"><span class="btn-letter">a</span> <span class="question-answer">Paris</span></button>
 </body>
 </html>
