Lógica do Quiz: display message at the end

--- a/index.html
+++ b/index.html
@@ -13,9 +13,10 @@
 
     <!--Score Board-->
     <div id="score-container" class="hide">
-        <h2>Parabéns!</h2>
+        <h2>Fim!</h2>
         <!-- <p id="text-score">Pontuação:</p> -->
         <p id="display-score"><span>90</span>%</p>
+        <p id="message">Parabéns, acertou todas</p>
         <p>Acertou <span id="correct-answers">1</span> / <span id="questions-qty">10</span> perguntas</p>
         <button id="restart-btn">Recomeçar</button>
     </div>
